Up composer update

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
-        "linecorp/line-bot-sdk": "^7.1"
+        "linecorp/line-bot-sdk": "^7.1",
+        "socialiteproviders/line": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
